cargo_check_final_rbac_5.log
warning: /app/crates/auth-platform/Cargo.toml: file `/app/crates/auth-platform/src/lib.rs` found to be present in multiple build targets:
  * `lib` target `auth_platform`
  * `integration-test` target `lib`
    Checking auth-db v0.1.0 (/app/crates/auth-db)
    Checking auth-extension v0.1.0 (/app/crates/auth-extension)
    Checking auth-protocols v0.1.0 (/app/crates/auth-protocols)
    Checking auth-audit v0.1.0 (/app/crates/auth-audit)
error: set `DATABASE_URL` to use query macros online, or run `cargo sqlx prepare` to update the query cache
  --> crates/auth-db/src/repositories/authorization/role_repository.rs:22:9
   |
22 | /         sqlx::query!(
23 | |             r#"
24 | |             INSERT INTO roles (
25 | |                 id, tenant_id, organization_id, name, description,
...  |
41 | |             role.updated_at
42 | |         )
   | |_________^
   |
   = note: this error originates in the macro `$crate::sqlx_macros::expand_query` which comes from the expansion of the macro `sqlx::query` (in Nightly builds, run with -Z macro-backtrace for more info)

error: set `DATABASE_URL` to use query macros online, or run `cargo sqlx prepare` to update the query cache
  --> crates/auth-db/src/repositories/authorization/role_repository.rs:71:22
   |
71 |           let result = sqlx::query!(
   |  ______________________^
72 | |             "DELETE FROM roles WHERE id = ? AND tenant_id = ?",
73 | |             id.to_string(),
74 | |             tenant_id.to_string()
75 | |         )
   | |_________^
   |
   = note: this error originates in the macro `$crate::sqlx_macros::expand_query` which comes from the expansion of the macro `sqlx::query` (in Nightly builds, run with -Z macro-backtrace for more info)

error: set `DATABASE_URL` to use query macros online, or run `cargo sqlx prepare` to update the query cache
  --> crates/auth-db/src/repositories/authorization/role_repository.rs:87:19
   |
87 |           let rec = sqlx::query!(
   |  ___________________^
88 | |             r#"
89 | |             SELECT id, tenant_id, organization_id, name, description,
90 | |                    parent_role_id, is_system_role, scope, metadata, constraints,
...  |
96 | |             tenant_id.to_string()
97 | |         )
   | |_________^
   |
   = note: this error originates in the macro `$crate::sqlx_macros::expand_query` which comes from the expansion of the macro `sqlx::query` (in Nightly builds, run with -Z macro-backtrace for more info)

error: set `DATABASE_URL` to use query macros online, or run `cargo sqlx prepare` to update the query cache
   --> crates/auth-db/src/repositories/authorization/role_repository.rs:136:9
    |
136 | /         sqlx::query!(
137 | |             "INSERT INTO role_permissions (role_id, permission_id) VALUES (?, ?)",
138 | |             role_id.to_string(),
139 | |             permission_id.to_string()
140 | |         )
    | |_________^
    |
    = note: this error originates in the macro `$crate::sqlx_macros::expand_query` which comes from the expansion of the macro `sqlx::query` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0432]: unresolved import `role_repository`
  --> crates/auth-db/src/repositories/mod.rs:13:9
   |
13 | pub use role_repository::*;
   |         ^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `role_repository`
   |
   = help: if you wanted to use a crate named `role_repository`, use `cargo add role_repository` to add it to your `Cargo.toml`

warning: unused import: `std::collections::HashMap`
 --> crates/auth-db/src/repositories/authorization/role_repository.rs:7:5
  |
7 | use std::collections::HashMap;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0282]: type annotations needed
  --> crates/auth-db/src/repositories/authorization/role_repository.rs:22:9
   |
22 | /         sqlx::query!(
23 | |             r#"
24 | |             INSERT INTO roles (
25 | |                 id, tenant_id, organization_id, name, description,
...  |
43 | |         .execute(&self.pool)
44 | |         .await
   | |______________^ cannot infer type

error[E0282]: type annotations needed
  --> crates/auth-db/src/repositories/authorization/role_repository.rs:45:19
   |
45 |         .map_err(|e| AuthError::DatabaseError { message: e.to_string() })?;
   |                   ^                                      - type must be known at this point
   |
help: consider giving this closure parameter an explicit type
   |
45 |         .map_err(|e: /* Type */| AuthError::DatabaseError { message: e.to_string() })?;
   |                    ++++++++++++

error[E0282]: type annotations needed
  --> crates/auth-db/src/repositories/authorization/role_repository.rs:71:22
   |
71 |           let result = sqlx::query!(
   |  ______________________^
72 | |             "DELETE FROM roles WHERE id = ? AND tenant_id = ?",
73 | |             id.to_string(),
74 | |             tenant_id.to_string()
75 | |         )
76 | |         .execute(&self.pool)
77 | |         .await
   | |______________^ cannot infer type

error[E0282]: type annotations needed
  --> crates/auth-db/src/repositories/authorization/role_repository.rs:78:19
   |
78 |         .map_err(|e| AuthError::DatabaseError { message: e.to_string() })?;
   |                   ^                                      - type must be known at this point
   |
help: consider giving this closure parameter an explicit type
   |
78 |         .map_err(|e: /* Type */| AuthError::DatabaseError { message: e.to_string() })?;
   |                    ++++++++++++

error[E0282]: type annotations needed
  --> crates/auth-db/src/repositories/authorization/role_repository.rs:87:19
   |
87 |           let rec = sqlx::query!(
   |  ___________________^
88 | |             r#"
89 | |             SELECT id, tenant_id, organization_id, name, description,
90 | |                    parent_role_id, is_system_role, scope, metadata, constraints,
...  |
98 | |         .fetch_optional(&self.pool)
99 | |         .await
   | |______________^ cannot infer type

error[E0282]: type annotations needed
   --> crates/auth-db/src/repositories/authorization/role_repository.rs:100:19
    |
100 |         .map_err(|e| AuthError::DatabaseError { message: e.to_string() })?;
    |                   ^                                      - type must be known at this point
    |
help: consider giving this closure parameter an explicit type
    |
100 |         .map_err(|e: /* Type */| AuthError::DatabaseError { message: e.to_string() })?;
    |                    ++++++++++++

error[E0282]: type annotations needed
   --> crates/auth-db/src/repositories/authorization/role_repository.rs:136:9
    |
136 | /         sqlx::query!(
137 | |             "INSERT INTO role_permissions (role_id, permission_id) VALUES (?, ?)",
138 | |             role_id.to_string(),
139 | |             permission_id.to_string()
140 | |         )
141 | |         .execute(&self.pool)
142 | |         .await
    | |______________^ cannot infer type

error[E0282]: type annotations needed
   --> crates/auth-db/src/repositories/authorization/role_repository.rs:143:19
    |
143 |         .map_err(|e| AuthError::DatabaseError { message: e.to_string() })?;
    |                   ^                                      - type must be known at this point
    |
help: consider giving this closure parameter an explicit type
    |
143 |         .map_err(|e: /* Type */| AuthError::DatabaseError { message: e.to_string() })?;
    |                    ++++++++++++

warning: unused variable: `tenant_id`
   --> crates/auth-db/src/repositories/authorization/role_repository.rs:130:26
    |
130 |     async fn list(&self, tenant_id: Uuid) -> Result<Vec<Role>, AuthError> {
    |                          ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_tenant_id`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

Some errors have detailed explanations: E0282, E0432.
For more information about an error, try `rustc --explain E0282`.
warning: `auth-db` (lib) generated 2 warnings
error: could not compile `auth-db` (lib) due to 13 previous errors; 2 warnings emitted
